--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -7,10 +7,15 @@
     <meta name="viewport" content="user-scalable=no, width=device-width, height=device-height, initial-scale=1.0" />
     <title>Mike Ralph - Admin</title>
     <!--<link rel="stylesheet" href="../static/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="../static/glider.min.css">
-    <link rel="stylesheet" href="../static/admin.css" />-->
+    <link rel="stylesheet" href="../static/glider.min.css">-->
+    <link rel="stylesheet" href="../static/admin.css" />
 </head>
 
 <body>
     hello mongo
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://unpkg.com/vue-async-computed"></script>
+
+<script src="../static/admin.js"></script>
